--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,3 +1,13 @@
+name: Android CI
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
