--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,1 +1,3 @@
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.1.1-all.zip
+android.useAndroidX=true
+android.enableJetifier=true
